scripts/nullaway/annotator/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8.txt
../annotator/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/test/github/lindenb/dataindexer/dbsnp/DBSnpLoader.java:107: error: [NullAway] dereferenced expression o.rs_id is @Nullable
			out.writeInt(o.rs_id.rs_id);
			                    ^
    (see http://t.uber.com/nullaway )
../annotator/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/test/github/lindenb/dataindexer/dbsnp/DBSnpLoader.java:115: error: [NullAway] dereferenced expression dbSnp137File is @Nullable
		if(dbSnp137File.exists())
		               ^
    (see http://t.uber.com/nullaway )
../annotator/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/AbstractDatabaseReader.java:95: error: [NullAway] unboxing of a @Nullable value
		return getConfig().getSizeOfItem();
		                                ^
    (see http://t.uber.com/nullaway )
../annotator/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/AbstractDatabaseReader.java:114: error: [NullAway] dereferenced expression this.indexFile is @Nullable
			this.indexFile.seek(idx*8);
			              ^
    (see http://t.uber.com/nullaway )
../annotator/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/AbstractDatabaseReader.java:121: error: [NullAway] dereferenced expression this.dataFile is @Nullable
		this.dataFile.seek(offset);
		             ^
    (see http://t.uber.com/nullaway )
../annotator/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/AbstractDatabaseReader.java:123: error: [NullAway] dereferenced expression getConfig().getDataBinding() is @Nullable
		return getConfig().getDataBinding().readObject(dis);
		                                   ^
    (see http://t.uber.com/nullaway )
../annotator/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/SecondaryConfig.java:50: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return comparator;
		^
    (see http://t.uber.com/nullaway )
../annotator/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/SecondaryConfig.java:82: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return keyBinding;
		^
    (see http://t.uber.com/nullaway )
../annotator/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/PrimaryDataIndexWriter.java:74: error: [NullAway] dereferenced expression dataOutput is @Nullable
		offset=dataOutput.getOffset();
		                 ^
    (see http://t.uber.com/nullaway )
../annotator/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/AbstractDataIndexer.java:53: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return dataBinding;
		^
    (see http://t.uber.com/nullaway )
../annotator/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/SecondaryDataWriter.java:59: error: [NullAway] dereferenced expression getConfig().getKeyCreator() is @Nullable
		for(K k:getConfig().getKeyCreator().getSecondaryKeys(object))
		                                   ^
    (see http://t.uber.com/nullaway )
../annotator/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/SecondaryDataWriter.java:62: error: [NullAway] passing @Nullable parameter 'this.tmpOut' where @NonNull is required
			getDataBinding().writeObject(oao, this.tmpOut);
			                                      ^
    (see http://t.uber.com/nullaway )
../annotator/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/SecondaryDataWriter.java:90: error: [NullAway] @NonNull field SecondaryDataWriter$FileAndSize.file not initialized
		File file;
		     ^
    (see http://t.uber.com/nullaway )
../annotator/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/SecondaryDataWriter.java:106: error: [NullAway] passing @Nullable parameter 'this.in' where @NonNull is required
			ObjectAndOffset<K> oao=getDataBinding().readObject(this.in);
			                                                       ^
    (see http://t.uber.com/nullaway )
../annotator/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/SecondaryDataWriter.java:113: error: [NullAway] passing @Nullable parameter 'this.out' where @NonNull is required
			getDataBinding().writeObject(oao,this.out);
			                                     ^
    (see http://t.uber.com/nullaway )
../annotator/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/SecondaryDataWriter.java:146: error: [NullAway] assigning @Nullable expression to @NonNull field
		 rootFile.file=this.tmpFile1;
		              ^
    (see http://t.uber.com/nullaway )
../annotator/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/SecondaryDataWriter.java:201: error: [NullAway] dereferenced expression this.objectAndOffsetComparator is @Nullable
					if(this.objectAndOffsetComparator.compare(objectItem, diskItem)<=0)
					                                 ^
    (see http://t.uber.com/nullaway )
../annotator/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/SecondaryDataWriter.java:283: error: [NullAway] dereferenced expression prevFile is @Nullable
		prevFile.close();
		        ^
    (see http://t.uber.com/nullaway )
../annotator/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/SecondaryDataWriter.java:285: error: [NullAway] dereferenced expression this.tmpFile1 is @Nullable
		this.tmpFile1.delete();
		             ^
    (see http://t.uber.com/nullaway )
19 errors
